tests/NormalTests/paczka1/small_fuzzy/57001947.err
Error in line 6: lqdMjd A892 36,6
Error in line 11: PHHsLjmqe S827 36,3
Error in line 9: lqdMjd A799 7,8
